@@ -1,3 +1,4 @@
+* allowing both queues.conf and queues.d/ at the same time, each one with its own merging mechanism
 * for clarity, code for plugins management in a separate module pluginsmgmt.py
 * first draft for sched plugin Throttle 
 * the config files, logrotate file and sysconfig files are not treated as documentation anymore
